Changes for 2.3.3

New features:
A.F.....S. [ZBXNEXT-1133] added support for custom expressions in action conditions (Krists)
...G...... [ZBXNEXT-1300] added low-level discovery support for enumerating CPUs on all supported platforms (Juris)
A......... [ZBX-8459] made possible CORS AJAX requests for JSON API (Andrejs)

Bug fixes:
..F....... [ZBX-8431] added context for text string 'Name' (Oleg)
..F....... [ZBX-8467] removed "make_latest_issues" function extra argument (Oleg)
..F....... [ZBX-8436] fixed page layout being broken with IE8 in cases when item rows are added or removed (Krists)
..F....... [ZBX-8286] fixed undefined index when enabling or disabling hosts in a host group (Krists)
.......PS. [ZBX-8037] added informative log message about Zabbix not upgrading SQLite3 databases (Juris)
..F....... [ZBX-8425] fixed "Host status" widget displaying problematic host if one of its groups is set to hidden in dashboard filter (Ivo)

--------------------------------------------------------------------------------
Changes for 2.3.2

New features:
A.F....PS. [ZBXNEXT-2301] added a way to disable SNMP bulk operations per interface (Oleg,asaveljevs)
..F....... [ZBX-2603] added validation while working with regular expressions (Andrejs)
..F....... [ZBX-8278] prepared frontend for mbstring.internal_encoding ini option deprecation in php 5.6+ (Andrejs)
..F....... [ZBXNEXT-2222] added trigger status filter to the trigger overview page (Sasha)
..F....... [ZBX-8339] removed auto login/logout controls while editing guest user (Andrejs)
...G...... [ZBXNEXT-2203] added information on the reason log[] and logrt[] items became not supported (Andris,asaveljevs)
..F....... [ZBXNEXT-2254] added support for custom PostgreSQL schema to frontend and updated setup wizard (Krists)
..F....... [ZBX-8329] added styling for disabled buttons and inputs (Andrejs)
..F....... [ZBXNEXT-2344] added links on group names in "Web monitoring" widget (Ivo)